--- a/index.html
+++ b/index.html
@@ -1,12 +1,158 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="shortcut icon" href="./images/icons/favicon.png"/>
+        <link href="https://fonts.googleapis.com/css?family=Lateef&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css">
+        <title>Telluride</title>
+    </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+            <a class="d-inline d-lg-none" href="index.html">
+                <img src="./images/mountain-logo.png" alt="mini logo">
+            </a>
+            <a class="navbar-brand d-lg-inline d-none" href="index.html">
+                <img src="./images/full-logo.png" alt="full logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="./events.html">ACTIVITIES & EVENTS<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">PLAN YOUR TRIP</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">ABOUT TELLURIDE</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+        <section>
+            <h2>Explore the Outdoors!</h2>
+        <div class="d-flex flex-column align-items-center">
+            <div class="row flex-wrap col-12"> 
+                <div class="summary d-flex flex-column col-12 col-md-8">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/slope-2.jpg" alt="Telluride skier">
+                    </div>
+                    <div class="right-padding d-flex flex-column align-items-end">
+                        <a href="#"><h3>Skiing</h3></a>
+                        <p>With sunshine and no lift lines, skiing in Telluride is an epic experience.</p>
+                        <a href="#"><button class="btn-primary">Go Skiing!</button></a>
+                    </div>
+                </div>
+                <div class="summary d-flex flex-column col-12 col-md-4">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/falls-3.jpg" alt="waterfall hikers">
+                    </div>
+                    <div class="right-padding d-flex flex-column align-items-end">
+                        <a href="#"><h3>Hiking</h3></a>
+                        <p>Spectacular mountain vistas and wide open spaces will rejuvenate your spirit.</p>
+                        <a href="#"><button class="btn-primary">Go Hiking!</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row flex-wrap col-12 full"> 
+                <div class="summary d-flex flex-column col-12">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/lake.jpg" alt="scenic view">
+                    </div>
+                    <div class="right-padding d-flex flex-column align-items-end">
+                        <a href="#"><h3>Scenic Views</h3></a>
+                        <p>Telluride has some of the most spectacular views Colorado has to offer.</p>
+                        <a href="#"><button class="btn-primary">See What's Out There!</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <section>
+            <h2>Explore the Town!</h2>
+        <div class="d-flex flex-column align-items-center">
+            <div class="row flex-wrap col-12"> 
+                <div class="summary d-flex flex-column col-12 col-md-4">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/food.jpg" alt="a delicious meal">
+                    </div>
+                    <div class="right-padding d-flex flex-column align-items-end">
+                        <a href="#"><h3>Dining Destinations</h3></a>
+                        <p>Telluride is home to some of the country's most celebrated chefs.</p>
+                        <a href="#"><button class="btn-primary">Feast!</button></a>
+                    </div>
+                </div>
+                <div class="summary d-flex flex-column col-12 col-md-8">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/jazz-festival-2.jpg" alt="Telluride Jazz Festival stage">
+                    </div>
+                    <div class="right-padding d-flex flex-column align-items-end">
+                        <a href="#"><h3>Festivals & Events</h3></a>
+                        <p>For over 30 years, the name "Telluride" has been synonymous with its signature events—whether musical, cultural, culinary, scientific, athletic or unusual.</p>
+                        <a href="#"><button class="btn-primary">Find an Adventure!</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <section class="review-form">
+            <h2>Already visited? Tell us about your experience!</h2>
+            <form>
+                <div class="form-group d-flex justify-content-between flex-wrap">
+                    <label class="col-12 col-md-4" for="name">What is your name?</label>
+                    <input class="input col-12 col-md-7" type="text" id="name" placeholder="Mr. Colorado">
+                </div>
+                <div class="form-group d-flex justify-content-between flex-wrap">
+                    <label class="col-12 col-md-4" for="where">Where did you go?</label>
+                    <input class="input col-12 col-md-7" type="text" id="where" placeholder="Bridal Veil Falls">
+                </div>
+                <div class="form-group d-flex justify-content-between flex-wrap">
+                    <label class="col-12 col-md-4" for="why">Why was it an incredible experience?</label>
+                    <textarea class="input form-control col-12 col-md-7" id="why" rows="3" placeholder="Wawter"></textarea>
+                </div>
+                <div class="form-group d-flex justify-content-between flex-wrap">
+                    <label class="col-12 col-md-4" for="photos">Take any great photos?</label>
+                    <input type="file" class="input form-control-file col-12 col-md-7" id="photos">
+                </div>
+                <button type="submit" class="input btn btn-primary w-100">Submit</button>
+            </form>
+        </section>
+
+    </main>
+    <footer>
+        <img class="w-100" src="./images/mountains-summer.png" alt="mountain graphic">
+        <div class="row justify-content-between align-items-center flex-wrap footer-content">
+            <div class="d-flex justify-content-around col-12 col-sm-5">
+                <ul class="text-left">
+                    <li><a href="./jazz-festival.html">ACTIVITIES</a></li>
+                    <li><a href="./events.html">EVENTS</a></li>
+                    <li><a href="#">RESORTS</a></li>
+                </ul>
+                <ul class="text-right">
+                    <li><a href="#">VISITORS GUIDE</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">BOOK NOW</a></li>
+                </ul>
+            </div>
+            <div class="d-flex social-media justify-content-around col-12 col-sm-4">
+                <a href="facebook.com"><img src="./images/icons/facebook-f-brands.svg" alt="facebook"></a>
+                <a href="twitter.com"><img src="./images/icons/twitter-brands.svg" alt="twitter"></a>
+                <a href="instagram.com"><img src="./images/icons/instagram-brands.svg" alt="instagram"></a>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
