--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lateef&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
-        <title>Telluride</title>
+        <title>Travel Telluride</title>
     </head>
 <body>
     <header>
@@ -21,88 +21,144 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="./events.html">ACTIVITIES & EVENTS<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">PLAN YOUR TRIP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">ABOUT TELLURIDE</a></li>
+                    <li><a class="nav-link" href="./events.html">ACTIVITIES & EVENTS<span class="sr-only">(current)</span></a></li>
+                    <li><a class="nav-link" href="#">PLAN YOUR TRIP</a></li>
+                    <li><a class="nav-link" href="#">ABOUT TELLURIDE</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-
+        <div class="promo">
+            <img src="./images/media/town-snow.png" alt="Welcome to Telluride (town of telluride)">
+        </div>
         <section>
             <h2>Explore the Outdoors!</h2>
-        <div class="d-flex flex-column align-items-center">
-            <div class="row flex-wrap col-12"> 
-                <div class="summary d-flex flex-column col-12 col-md-8">
-                    <div class="thumbnail d-flex">
-                        <img src="./images/media/slope-2.jpg" alt="Telluride skier">
+            <div class="d-flex flex-column align-items-center">
+                <div class="row x-margin"> 
+                    <div class="summary d-flex flex-column col-12 col-md-8">
+                        <div class="thumbnail d-flex">
+                            <img src="./images/media/slope-2.jpg" alt="Telluride skier">
+                        </div>
+                        <div class="x-padding d-flex flex-column align-items-end">
+                            <a href="#"><h3>Skiing</h3></a>
+                            <p>With sunshine and no lift lines, skiing in Telluride is an epic experience.</p>
+                            <button class="btn">
+                                <a href="#">Go Skiing!</a>
+                            </button>
+                        </div>
                     </div>
-                    <div class="right-padding d-flex flex-column align-items-end">
-                        <a href="#"><h3>Skiing</h3></a>
-                        <p>With sunshine and no lift lines, skiing in Telluride is an epic experience.</p>
-                        <a href="#"><button class="btn-primary">Go Skiing!</button></a>
+                    <div class="summary d-flex flex-column col-12 col-md-4">
+                        <div class="thumbnail d-flex">
+                            <img src="./images/media/falls-3.jpg" alt="waterfall hikers">
+                        </div>
+                        <div class="x-padding d-flex flex-column align-items-end">
+                            <a href="#"><h3>Hiking</h3></a>
+                            <p>Spectacular mountain vistas and wide open spaces will rejuvenate your spirit.</p>
+                            <button class="btn">
+                                <a href="#">Go Hiking!</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="summary d-flex flex-column col-12 col-md-4">
-                    <div class="thumbnail d-flex">
-                        <img src="./images/media/falls-3.jpg" alt="waterfall hikers">
-                    </div>
-                    <div class="right-padding d-flex flex-column align-items-end">
-                        <a href="#"><h3>Hiking</h3></a>
-                        <p>Spectacular mountain vistas and wide open spaces will rejuvenate your spirit.</p>
-                        <a href="#"><button class="btn-primary">Go Hiking!</button></a>
+                <div class="row col-12 full"> 
+                    <div class="summary d-flex flex-column col-12">
+                        <div class="thumbnail d-flex">
+                            <img src="./images/media/lake.jpg" alt="scenic view">
+                        </div>
+                        <div class="x-padding d-flex flex-column align-items-end">
+                            <a href="#"><h3>Scenic Views</h3></a>
+                            <p>Telluride has some of the most spectacular views Colorado has to offer.</p>
+                            <button class="btn">
+                                <a href="#">See What's Out There!</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row flex-wrap col-12 full"> 
-                <div class="summary d-flex flex-column col-12">
-                    <div class="thumbnail d-flex">
-                        <img src="./images/media/lake.jpg" alt="scenic view">
-                    </div>
-                    <div class="right-padding d-flex flex-column align-items-end">
-                        <a href="#"><h3>Scenic Views</h3></a>
-                        <p>Telluride has some of the most spectacular views Colorado has to offer.</p>
-                        <a href="#"><button class="btn-primary">See What's Out There!</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         </section>
-
         <section>
             <h2>Explore the Town!</h2>
-        <div class="d-flex flex-column align-items-center">
-            <div class="row flex-wrap col-12"> 
-                <div class="summary d-flex flex-column col-12 col-md-4">
-                    <div class="thumbnail d-flex">
-                        <img src="./images/media/food.jpg" alt="a delicious meal">
+            <div class="d-flex flex-column align-items-center">
+                <div class="row x-margin"> 
+                    <div class="summary d-flex flex-column col-12 col-md-4">
+                        <div class="thumbnail d-flex">
+                            <img src="./images/media/food.jpg" alt="a delicious meal">
+                        </div>
+                        <div class="x-padding d-flex flex-column align-items-end">
+                            <a href="#"><h3>Dining Destinations</h3></a>
+                            <p>Telluride is home to some of the country's most celebrated chefs.</p>
+                            <button class="btn">
+                                <a href="#">Feast!</a>
+                            </button>
+                        </div>
                     </div>
-                    <div class="right-padding d-flex flex-column align-items-end">
-                        <a href="#"><h3>Dining Destinations</h3></a>
-                        <p>Telluride is home to some of the country's most celebrated chefs.</p>
-                        <a href="#"><button class="btn-primary">Feast!</button></a>
-                    </div>
-                </div>
-                <div class="summary d-flex flex-column col-12 col-md-8">
-                    <div class="thumbnail d-flex">
-                        <img src="./images/media/jazz-festival-2.jpg" alt="Telluride Jazz Festival stage">
-                    </div>
-                    <div class="right-padding d-flex flex-column align-items-end">
-                        <a href="#"><h3>Festivals & Events</h3></a>
-                        <p>For over 30 years, the name "Telluride" has been synonymous with its signature events—whether musical, cultural, culinary, scientific, athletic or unusual.</p>
-                        <a href="#"><button class="btn-primary">Find an Adventure!</button></a>
+                    <div class="summary d-flex flex-column col-12 col-md-8">
+                        <div class="thumbnail d-flex">
+                            <img src="./images/media/jazz-festival-2.jpg" alt="Telluride Jazz Festival stage">
+                        </div>
+                        <div class="x-padding d-flex flex-column align-items-end">
+                            <a href="./events.html"><h3>Festivals & Events</h3></a>
+                            <p>For over 30 years, the name "Telluride" has been synonymous with its signature events—whether musical, cultural, culinary, scientific, athletic or unusual.</p>
+                            <button class="btn">
+                                <a href="./events.html">Find an Adventure!</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
-
-        <section class="review-form">
+        <section class="section-line">
+            <h2>This Could Be You!</h2>
+            <div class="row x-margin">
+                <div class="summary d-flex flex-column col-12 col-sm-4">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/falls-2.jpg" alt="bridal veil waterfall">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <div class="bg-green x-padding d-flex flex-column align-items-end">
+                            <h3>Bridal Veil Falls</h3>
+                            <h4>Felicia Day</h4>
+                            <p>This was a refreshing hike through well managed trail to one of the most beautiful waterfalls in the state! The observation deck was a great place for a picnic and a perfect opportunity for gorgeous photos of the falls. A must for any outdoor adventurer and a photographer’s dream!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="summary d-flex flex-column col-12 col-sm-4">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/ghosttown-coffee.jpg" alt="Ghost town coffee">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <div class="bg-green x-padding d-flex flex-column align-items-end">
+                            <h3>Cozy Ghost Town Coffee</h3>
+                            <h4>Dave Frankfort</h4>
+                            <p>If you want to chill, this is one of my favorite places. I met the most amazing people there. It is a relaxed spot and a nice place to relax before or after all the craziness that is skiing.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="summary d-flex flex-column col-12 col-sm-4">
+                    <div class="thumbnail d-flex">
+                        <img src="./images/media/town-night.jpg" alt="Telluride at night">
+                    </div>
+                    <div class="d-flex flex-column">
+                        <div class="bg-green x-padding d-flex flex-column align-items-end">
+                            <h3>The Nightlife!</h3>
+                            <h4>Serena Wilbon</h4>
+                            <p>A fun, relaxing place to discover some great bands. There are so many bars and restaurants filled with live music and good atmosphere. Definitely worth the trip!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center bottom-margin">
+                <button class="btn">
+                    <a href="#">More Experiences</a>
+                </button>
+            </div>
+        </section>
+        <section>
             <h2>Already visited? Tell us about your experience!</h2>
-            <form>
+            <form class="x-margin bottom-margin">
                 <div class="form-group d-flex justify-content-between flex-wrap">
                     <label class="col-12 col-md-4" for="name">What is your name?</label>
                     <input class="input col-12 col-md-7" type="text" id="name" placeholder="Mr. Colorado">
@@ -119,14 +175,13 @@
                     <label class="col-12 col-md-4" for="photos">Take any great photos?</label>
                     <input type="file" class="input form-control-file col-12 col-md-7" id="photos">
                 </div>
-                <button type="submit" class="input btn btn-primary w-100">Submit</button>
+                <button type="submit" class="btn w-100">Submit</button>
             </form>
         </section>
-
     </main>
     <footer>
         <img class="w-100" src="./images/mountains-summer.png" alt="mountain graphic">
-        <div class="row justify-content-between align-items-center flex-wrap footer-content">
+        <div class="row justify-content-between align-items-center footer-content">
             <div class="d-flex justify-content-around col-12 col-sm-5">
                 <ul class="text-left">
                     <li><a href="./jazz-festival.html">ACTIVITIES</a></li>
@@ -147,12 +202,9 @@
         </div>
     </footer>
 
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 </html>
